<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout02"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:background="@drawable/olas_mar">
	
<RelativeLayout
	android:id="@+id/RelativeLayout01"
	android:layout_width="wrap_content" android:layout_height="10dp">
</RelativeLayout>

<RelativeLayout
	android:id="@+id/RelativeLayout02"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content">
	<ImageView
		android:id="@+id/ImageView01"
		android:layout_width="wrap_content"
		android:background="@drawable/buscaminas" android:layout_height="80dp">
	</ImageView>
</RelativeLayout>



<RelativeLayout
	android:id="@+id/RelativeLayout04"
	android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_marginTop="10dp">
	<Button 
		android:id="@+id/Button01"
		android:layout_centerHorizontal="true"
		android:text="@string/op1"
		android:layout_width="200dp" android:layout_height="55dp" android:textStyle="bold">
	</Button>
</RelativeLayout>



<RelativeLayout
	android:id="@+id/RelativeLayout13"
	android:layout_height="wrap_content"
	android:layout_width="fill_parent" android:layout_marginTop="10dp">
	<Button
		android:id="@+id/Button04"
		android:layout_centerHorizontal="true" android:text="@string/op4" android:layout_width="200dp" android:layout_height="55dp" android:textStyle="bold" android:textColor="#696969" android:focusable="false">
	</Button>
</RelativeLayout>



<RelativeLayout
	android:id="@+id/RelativeLayout06"
	android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_marginTop="10dp">
	<Button
		android:id="@+id/Button02"
		android:layout_centerHorizontal="true" android:text="@string/op2" android:layout_width="200dp" android:layout_height="55dp" android:textStyle="bold" android:focusable="false">
	</Button>
</RelativeLayout>



<RelativeLayout
	android:id="@+id/RelativeLayout08"
	android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_marginTop="10dp">
	<Button
		android:id="@+id/Button03"
		android:layout_centerHorizontal="true" android:text="@string/op3" android:layout_width="200dp" android:layout_height="55dp" android:textStyle="bold">
	</Button>
</RelativeLayout>

<RelativeLayout
	android:id="@+id/RelativeLayout11"
	android:layout_width="wrap_content" android:layout_height="15dp">
</RelativeLayout>

<RelativeLayout
	android:id="@+id/RelativeLayout10"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content">
	<TextView
		android:layout_width="wrap_content"
		android:layout_centerHorizontal="true"
		android:id="@+id/TextView01"
		android:layout_height="wrap_content"
		android:layout_above="@+id/ImageView02" android:textSize="16sp" android:text="@string/report">
	</TextView>
</RelativeLayout>

<RelativeLayout
	android:id="@+id/RelativeLayout09" android:layout_width="fill_parent" android:layout_height="70dp">
	<ImageView
		android:id="@+id/ImageView02"
		android:background="@drawable/logo" android:layout_centerHorizontal="true" android:layout_centerVertical="true" android:layout_height="50dp" android:layout_width="120dp">
	</ImageView>
</RelativeLayout>



</LinearLayout>